added title page, favicons, less variables

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--meta(name="theme-color" content="#80a535")-->
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <!--link(rel="icon" type="image/png" href="../img/favicons/16x16.png" sizes="16x16")-->
-    <!--link(rel="icon" type="image/png" href="../img/favicons/32x32.png" sizes="32x32")-->
-    <!--link(rel="icon" type="image/png" href="../img/favicons/96x96.png" sizes="96x96")-->
-    <title>Page</title>
+    <link rel="shortcut icon" href="img/favicons/icon-32x32.png" type="image/png">
+    <link rel="icon" type="image/png" href="../img/favicons/icon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../img/favicons/icon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="../img/favicons/icon-96x96.png" sizes="96x96">
+    <title>FIZZA.RU-Займы для бизнеса online. Кредиты малому бизнесу. Займы для бизнеса без залога и поручителей от инветоров. Займы юридическим лицам без банков</title>
     <link rel="stylesheet" href="../styles/bootstrap.css">
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/style.css">
